--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,54 @@
 
 <body>
   <main>
-    <div class="element" style="background-color: #2a4065">
-      <header>
-        <span id="atomic-number">1</span>
-        <span id="atomic-mass">1.008</span>
-      </header>
+    <section class="principal">
+      <div class="element">
+        <header>
+          <span class="atomic-number">1</span>
+          <span class="atomic-mass">1.00794(4)</span>
+        </header>
 
-      <h2 id="abbreviation">H</h2>
-      <h3 id="element-name">Hydrogen</h3>
-    </div>
+        <h2 class="abbreviation">H</h2>
+        <h3 class="element-name">Hydrogen</h3>
+      </div>
 
-    <div class="search-bar">
-      <input type="text" placeholder="Write an atomic number">
-      <button id="search-button">Q</button>
-    </div>
+      <div class="search-bar">
+        <input type="text" placeholder="Write an atomic number">
+        <button id="search-button">Q</button>
+      </div>
+    </section>
+
+    <section class="element-map">
+      <div class="previous-element element">
+        <header>
+          <span class="previous-atomic-number atomic-number">1</span>
+          <span class="previous-atomic-mass atomic-mass">1.00794(4)</span>
+        </header>
+
+        <h2 class="previous-abbreviation abbreviation">H</h2>
+        <h3 class="previous-element-name element-name">Hydrogen</h3>
+      </div>
+
+      <div class="current-element element">
+        <header>
+          <span class="atomic-number">1</span>
+          <span class="atomic-mass">1.00794(4)</span>
+        </header>
+
+        <h2 class="abbreviation">H</h2>
+        <h3 class="element-name">Hydrogen</h3>
+      </div>
+
+      <div class="next-element element">
+        <header>
+          <span class="next-atomic-number atomic-number">2</span>
+          <span class="next-atomic-mass atomic-mass">4.002602(2)</span>
+        </header>
+
+        <h2 class="next-abbreviation abbreviation">He</h2>
+        <h3 class="next-element-name element-name">Helium</h3>
+      </div>
+    </section>
   </main>
 </body>
 
